# fastlivo2_platform

./: .gitignore  .gitmodules  readme.md  标定采集流程.md
ros2_ws/src/FAST-LIVO2/config/: camera_mid360_hik.yaml  camera_pinhole.yaml  mid360_hik.yaml
ros2_ws/src/fastlivo2_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/fastlivo2_bringup/launch/: mid360_hik_fastlivo2.launch.py  sensors_rviz.launch.py
ros2_ws/src/fastlivo2_bringup/rviz/: sensors.rviz
ros2_ws/src/hik_camera_ros2_driver/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/hik_camera_ros2_driver/config/: camera_params.yaml  fast_livo2_trigger_params.yaml
ros2_ws/src/hik_camera_ros2_driver/include/hik_camera_ros2_driver/: livox_timestamp_synchronizer.hpp
ros2_ws/src/hik_camera_ros2_driver/launch/: hik_camera_launch.py
ros2_ws/src/hik_camera_ros2_driver/src/: hik_camera_node.cpp  livox_timestamp_synchronizer.cpp
ros2_ws/src/hik_camera_ros2_driver/test/: test_livox_timestamp_synchronizer.cpp
ros2_ws/src/livox_ros_driver2/: CMakeLists.txt  package.xml
ros2_ws/src/livox_ros_driver2/config/: MID360_config.json
tools/: check_bag_time.py  check_lidar_param.py  check_livo_time.py  readme.md  run_fast_calib.sh
